eclipse_projects/descartes_example_step_tracer_1_0_incubation/descartes_atg/DescartesParadigm.atg
/*-------------------------------------------------------------------------
 compile with:
   java -classpath cocor/lib/Coco.jar Coco.Coco DescartesParadigm.atg -package descartes.examples.step.tracer.v1_0.DescartesParadigm
-------------------------------------------------------------------------*/

import descartes.examples.step.tracer.v1_0.DescartesParadigm.ast.DescartesParadigmFileASTImpl;

COMPILER DescartesParadigm

/*-------------------------------------------------------------------------*/

CHARACTERS
  letter    = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
  digit     = "0123456789".
  cr        = '\r'.
  lf        = '\n'.
  tab       = '\t'.
  stringCh  = ANY - '"' - '\\' - cr - lf.
  charCh    = ANY - '\'' - '\\' - cr - lf.
  printable = '\u0020' .. '\u007e'.
  hex       = "0123456789abcdefABCDEF".

TOKENS
  ident     = letter { letter | digit }.
  number    = digit { digit } [ ("."|",") digit { digit } ] [ ("e"|"E") digit { digit } [ ("."|",") digit { digit } ]].
  string    = '"' { stringCh | '\\' printable } '"'.
  badString = '"' { stringCh | '\\' printable } (cr | lf).
  char      = '\'' ( charCh | '\\' printable { hex } ) '\''.

/*
PRAGMAS
  ddtSym    = '$' { digit | letter }.  (. tab.SetDDT(la.val); .)
*/

COMMENTS FROM "(*" TO "*)" NESTED
COMMENTS FROM "--" TO cr lf

IGNORE cr + lf + tab

/*-------------------------------------------------------------------------*/

PRODUCTIONS

DescartesParadigm<out DescartesParadigmFileASTImpl ast> (. ast=null; .)
=

(

"INNER" "←" "•" "→" "+1" "."
"ETC" "←" "•" "→" "ETC" "(" "ETC" ")" "."
"OUTER" "←" "•" "→" "-1" "."

)

(

"INNER" "←" "•" "←" "ETC" "←" "•" "←" "OUTER" "."
"INNER" "→" "•" "→" "ETC" "→" "•" "→" "OUTER" "."

)

{

(

"INNER" "←" "•" "→" "paradigm" "(" inner_paradigm_id_declaration ")" "."
"ETC"   "←" "•" "→" "paradigm" "(" etc_paradigm_id_declaration ")" "."
"OUTER" "←" "•" "→" "paradigm" "(" outer_paradigm_id_declaration ")" "."

)|(

"paradigm" "(" paradigm_id_reference ")" "=" string "."

)|(

"weight" "(" "paradigm" "(" paradigm_id_reference ")" ")" "=" weight "."

)|(

"ratio" "+1" "/" "ETC" "/" "-1" ":"
"weight" "(" "paradigm" "(" paradigm_id_reference ")" ")"
"/"
"weight" "(" "paradigm" "(" paradigm_id_reference ")" ")"
"/"
"weight" "(" "paradigm" "(" paradigm_id_reference ")" ")"
"=" weight "/" weight "/" weight "."

)|(

"pair" "("
  "paradigm" "(" etc_paradigm_id_reference ")" "includes" "paradigm" "(" etc_subparadigm_id_reference ")" "."
  "paradigm" "(" outer_paradigm_id_reference ")" "includes" "paradigm" "(" outer_subparadigm_id_reference ")" "."
")" "."

)

}

"(" "and" "so" "on" ")" "."

"INNER" "includes" "the" "above" "and" "this" "line" "and" "the" "below" "formal" "description" "."
 
"DO" "CALL" "COINTERPRET" "(" "the" "above" "and" "this" "line" "and" "the" "below" "formal" "description" ")" "."
.


inner_paradigm_id_declaration=paradigm_id_declaration.
etc_paradigm_id_declaration=paradigm_id_declaration.
outer_paradigm_id_declaration=paradigm_id_declaration.

etc_paradigm_id_reference=paradigm_id_reference.
outer_paradigm_id_reference=paradigm_id_reference.

etc_subparadigm_id_reference=etc_paradigm_id_reference.
outer_subparadigm_id_reference=outer_paradigm_id_reference.

paradigm_id_declaration = paradigm_id. 
paradigm_id_reference = paradigm_id.

paradigm_id=string.

weight
= 

(
	"?"
|
	string 
|
	(number [string])
) 

.
END DescartesParadigm.
